--- a/plist/Chimera-1.2.9.plist
+++ b/plist/Chimera-1.2.9.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://ipawj.nuosike.cn/ipa/YY/129_Chimera.ipa</string>
+					<string>http://ipawj.nuosike.cn/ipa/YYIlI-lIl/YY/129_Chimera.ipa</string>
 				</dict>
 <dict>
       <key>kind</key>
