--- a/plist/baidutieba_resigned.plist
+++ b/plist/baidutieba_resigned.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://ipawj.nuosike.cn/ipa/noroot/nskfuli6_%e7%99%be%e5%ba%a6%e8%b4%b4%e5%90%a7.ipa</string>
+					<string>http://ipawj.nuosike.cn/ipa/YYIlI-lIl/noroot/nskfuli6_%e7%99%be%e5%ba%a6%e8%b4%b4%e5%90%a7.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
