--- a/plist/11.0-11.41.plist
+++ b/plist/11.0-11.41.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://ipawj.nuosike.cn/ipa/YYIlI-lIl/YY/11.0-11.41_Electra.ipa</string>
+					<string>http://ipawj.nuosike.cn/ipa/YYIlI-lIl/11.0-11.41_Electra.ipa</string>
 				</dict>
 <dict>
       <key>kind</key>
