--- a/plist/Th0r.plist
+++ b/plist/Th0r.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://ipawj.nuosike.cn/ipa/YYIlI-lIl/YY/3.0_Th0r.ipa</string>
+					<string>http://ipawj.nuosike.cn/ipa/YYIlI-lIl/3.0_Th0r.ipa</string>
 				</dict>
 <dict>
       <key>kind</key>
