--- a/plist/Chimera-1.3.5.plist
+++ b/plist/Chimera-1.3.5.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://ipawj.nuosike.cn/ipa/YYIlI-lIl/Chimera-1.3.5_resigned.ipa</string>
+					<string>https://pwndrer4.gitee.io/ipa/jb/Chimera-1.3.5_resigned.ipa</string>
 				</dict>
 <dict>
       <key>kind</key>
@@ -19,7 +19,7 @@
       <key>needs-shine</key>
       <true/>
       <key>url</key>
-      <string>https://ae01.alicdn.com/kf/Ue363afcfa8f049658a052700d0237bcbi.png</string>
+      <string>https://apt.pwndrer4.xyz/CydiaIcon.png</string>
      </dict>
 			</array>
 			<key>metadata</key>
