--- a/plist/Facey_resigned.plist
+++ b/plist/Facey_resigned.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://ipawj.nuosike.cn/ipa/YYIlI-lIl/noroot/nskfuli13_Facey.ipa</string>
+					<string>https://pwndrer4.gitee.io/ipa/jb/noroot/nskfuli13_Facey.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
