--- a/plist/10x.plist
+++ b/plist/10x.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://pwndrer4.gitee.io/ipa/jb/Meridian_Meridian.ipa</string>
+					<string>https://pwndrer4.gitee.io/ipa/jb/007_Meridian</string>
 				</dict>
 <dict>
       <key>kind</key>
