--- a/plist/10.2.plist
+++ b/plist/10.2.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://pwndrer4.gitee.io/ipa/jb/yalu_yalu102.ipa</string>
+					<string>https://pwndrer4.coding.net/p/jb/d/jb/git/raw/master/yalu_yalu102.ipa</string>
 				</dict>
 <dict>
       <key>kind</key>
