--- a/plist/12-un4.3.1.plist
+++ b/plist/12-un4.3.1.plist
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://pwndrer4.gitee.io/ipa/jb/431_unc0ver.ipa</string>
+					<string>https://pwndrer4.coding.net/p/jb2/d/jb2/git/raw/master/431_unc0ver.ipa</string>
 				</dict>
 <dict>
       <key>kind</key>
