--- a/plist/Chimera-1.0.3.plist
+++ b/plist/Chimera-1.0.3.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://pwndrer4.gitee.io/ipa/jb/103_Chimera.ipa</string>
+					<string>https://pwndrer4.coding.net/p/jb2/d/jb2/git/raw/master/103_Chimera.ipa</string>
 				</dict>
 <dict>
       <key>kind</key>
