--- a/plist/Chimera-1.3.5.plist
+++ b/plist/Chimera-1.3.5.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://pwndrer4.gitee.io/ipa/jb/Chimera-1.3.5_resigned.ipa</string>
+					<string>https://pwndrer4.coding.net/p/jb/d/jb/git/raw/master/Chimera-1.3.5_resigned.ipa</string>
 				</dict>
 <dict>
       <key>kind</key>
