--- a/plist/11.0-11.41.plist
+++ b/plist/11.0-11.41.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://pwndrer4.coding.net/p/jb/d/jb/git/raw/master/11.0-11.41_Electra.ipa</string>
+					<string>https://pwndrer4.gitee.io/ipa1/11.0-11.41_Electra.ipa</string>
 				</dict>
 <dict>
       <key>kind</key>
