--- a/plist/Chimera-1.2.2.plist
+++ b/plist/Chimera-1.2.2.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://pwndrer4.gitee.io/ipa1/122_Chimera.ipa</string>
+					<string>https://pwndrer4.gitee.io/ipa/122_Chimera.ipa</string>
 				</dict>
 <dict>
       <key>kind</key>
