--- a/plist/Chimera-1.3.3.plist
+++ b/plist/Chimera-1.3.3.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://pwndrer4.gitee.io/ipa1/133_Chimera.ipa</string>
+					<string>https://pwndrer4.gitee.io/ipa/133_Chimera.ipa</string>
 				</dict>
 <dict>
       <key>kind</key>
