--- a/plist/Chimera-1.3.9.plist
+++ b/plist/Chimera-1.3.9.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://pwndrer4.gitee.io/ipa1/139_Chimera.ipa</string>
+					<string>https://pwndrer4.gitee.io/ipa/139_Chimera.ipa</string>
 				</dict>
 				     <dict>
       <key>kind</key>
