--- a/plist/Chimera-1.0.8.plist
+++ b/plist/Chimera-1.0.8.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>hhttps://pwndrer4.gitee.io/ipa/108_Chimera.ipa</string>
+					<string>hhttps://ipa.sileo.ga/108_Chimera.ipa</string>
 				</dict>
 <dict>
       <key>kind</key>
