--- a/plist/12-un3.5.6.plist
+++ b/plist/12-un3.5.6.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://pwndrer4.gitee.io/ipa/356_unc0ver.ipa</string>
+					<string>https://ipa.sileo.ga/356_unc0ver.ipa</string>
 				</dict>
 <dict>
       <key>kind</key>
