--- a/plist/Chimera-1.2.7 (1).plist
+++ b/plist/Chimera-1.2.7 (1).plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://pwndrer4.gitee.io/ipa/jb/127_Chimera.ipa</string>
+					<string>https://ipa.sileo.ga/jb/127_Chimera.ipa</string>
 				</dict>
 <dict>
       <key>kind</key>
