--- a/plist/Filza.plist
+++ b/plist/Filza.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://pwndrer4.gitee.io/ipa/jb/A12_FilzaEscaped.ipa</string>
+					<string>https://ipa.sileo.ga/jb/A12_FilzaEscaped.ipa</string>
 				</dict>
 <dict>
       <key>kind</key>
