--- a/plist/qqzqb_resigned.plist
+++ b/plist/qqzqb_resigned.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://pwndrer4.gitee.io/ipa/QQ.ipa</string>
+					<string>https://ipa.sileo.ga/QQ.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
